// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Overlay should render correctly 1`] = `
<PopupContent
  closePopup={[Function]}
  level="DEFAULT"
  requireUserAction={false}
  title=""
  visible={true}
/>
`;

exports[`Overlay should render correctly with existing, disabled actions and "WARN" level 1`] = `
<PopupContent
  action1={
    {
      "callback": [MockFunction],
      "disabled": true,
      "icon": "testIcon",
      "label": "action1",
    }
  }
  action2={
    {
      "callback": [MockFunction],
      "disabled": true,
      "label": "action2",
    }
  }
  closePopup={[Function]}
  level="WARN"
  requireUserAction={false}
  title=""
  visible={true}
/>
`;
